--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
               roadAddress: data.roadAddress,
               jibunAddress: jibunAddress,
               zonecode: data.zonecode,
+              bname: data.bname, 
+              bname2: data.bname2,
             };
             window.postMessageToiOS(postData);
           },
