--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
               zonecode: data.zonecode,
               bname: data.bname, 
               bname2: data.bname2,
+              sido: data.sido,
+              sigungu: data.sigungu,
             };
             window.postMessageToiOS(postData);
           },
