--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
               bname2: data.bname2,
               sido: data.sido,
               sigungu: data.sigungu,
+              x: data.x,
+              y: data.y
             };
             window.postMessageToiOS(postData);
           },
