--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
               bname: data.bname, 
               bname2: data.bname2,
               sido: data.sido,
-              sigungu: data.sigungu,
-              x: x,
-              y: y
+              sigungu: data.sigungu
             };
             window.postMessageToiOS(postData);
           },
