--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
             var postData = {
               roadAddress: data.roadAddress,
+              roadAddressEnglish: data.roadAddressEnglish,
               jibunAddress: jibunAddress,
               zonecode: data.zonecode,
               bname: data.bname, 
