--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
               roadAddress: data.roadAddress,
               roadAddressEnglish: data.roadAddressEnglish,
               jibunAddress: jibunAddress,
+              jibunAddressEnglish: data.jibunAddressEnglish,
+              autoRoadAddressEnglish: data.autoRoadAddressEnglish,
+              autoJibunAddressEnglish: data.autoJibunAddressEnglish,
               zonecode: data.zonecode,
               bname: data.bname, 
               bname2: data.bname2,
