--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             var postData = {
               roadAddress: data.roadAddress,
               roadAddressEnglish: data.roadAddressEnglish,
+              addressEnglish: data.addressEnglish,
               jibunAddress: jibunAddress,
               jibunAddressEnglish: data.jibunAddressEnglish,
               autoRoadAddressEnglish: data.autoRoadAddressEnglish,
