--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
               bname: data.bname, 
               bname2: data.bname2,
               sido: data.sido,
-              sigungu: data.sigungu
+              sigungu: data.sigungu,
+              sidoEnglish: data.sidoEnglish,
+              sigunguEnglish: data.sigunguEnglish,
+              roadnameEnglish: data.roadnameEnglish
             };
             window.postMessageToiOS(postData);
           },
